--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,40 +24,17 @@ const projects: CollectionEntry<"projects">[] = (
   <Container>
     <aside data-pagefind-ignore>
       <h1 class="font-semibold text-black dark:text-white">
-  Introducing STFU and EAT 🔬
+  Introducing STFU and EAT
       </h1>
       <div class="space-y-16">
         <section>
           <article class="space-y-4">
-            <span>
               <p>
                 STFU and EAT is a no-nonsense recipe blog that optimizes for
                 macros and flavor. We focus on straightforward, high-protein
                 and macro-balanced recipes that maximize taste with minimal
                 fuss.
               </p>
-              <p>
-                The site includes features like <Link href="https://pagefind.app/"
-                  >Pagefind</Link
-                > for search, <Link href="https://giscus.app">Giscus</Link> for comments,
-                and handy tools to browse and filter recipes. For more details,
-                see this <Link href="/blog/00-micro-changelog">blog post</Link>.
-              </p>
-            </span>
-            <span class="animate">
-              <p>
-                The site still provides useful features — a sitemap, an RSS
-                feed, and Markdown + MDX support. It's styled with TailwindCSS
-                and supports system, light, and dark themes.
-              </p>
-              <p>
-                Visit
-                <Link href="https://github.com/trevortylerlee/astro-micro">
-                  STFU and EAT on GitHub
-                </Link>
-                to fork the repository to get started.
-              </p>
-            </span>
           </article>
         </section>
 
