recipes not blog

--- a/src/components/ArrowCard.astro
+++ b/src/components/ArrowCard.astro
@@ -2,11 +2,11 @@
 import type { CollectionEntry } from "astro:content";
 
 type Props = {
-  entry: CollectionEntry<"blog">;
+  entry: CollectionEntry<"recipes">;
 };
 
 const { entry } = Astro.props as {
-  entry: CollectionEntry<"blog">;
+  entry: CollectionEntry<"recipes">;
 };
 ---
 
