--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,9 +34,9 @@ const recipes = (await getCollection("recipes"))
         <section class="animate space-y-6">
           <div class="flex flex-wrap items-center justify-between gap-y-2">
             <h2 class="font-semibold text-black dark:text-white">
-              Latest posts
+              Latest recipes
             </h2>
-            <Link href="/recipes"> See all posts </Link>
+            <Link href="/recipes"> See all recipes </Link>
           </div>
           <ul class="not-prose flex flex-col gap-4">
             {
