--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,7 @@ import { SITE } from "@consts";
     <div class="flex flex-wrap justify-between gap-y-2">
       <Link href="/" underline={false}>
         <div class="font-semibold">
+          <img src="/logo.png" alt={SITE.TITLE + "logo"} class="inline w-[20px]" />
           {SITE.TITLE}&nbsp;
         </div>
       </Link>
