Banner. visual tweaks.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,10 +8,7 @@ import { SITE } from "@consts";
   <Container>
     <div class="flex flex-wrap justify-between gap-y-2">
       <Link href="/" underline={false}>
-        <div class="font-semibold">
-          <img src="/logo.png" alt={SITE.TITLE + "logo"} class="inline w-[20px]" />
-          {SITE.TITLE}&nbsp;
-        </div>
+        <img src="/banner.png" alt={SITE.TITLE + "logo"} class="w-[150px] inline" />
       </Link>
       <nav class="flex items-center gap-5 text-sm">
         <Link href="/recipes">recipes</Link>
