hide/show images

--- a/src/components/ExpandableImage.astro
+++ b/src/components/ExpandableImage.astro
@@ -17,6 +17,7 @@ const { src, alt } = Astro.props;
   .expandable-image {
     position: relative;
     --thumb-width: 200px;
+    margin-top: 1rem;
   }
 
   .image-wrapper {
